<resources>
    <string name="Import">导入</string>
    <string name="Log_in_every_day_to_collect_gold_coins">每日登录即可领取金币</string>
    <string name="Magisk_setting">Magisk支持</string>
    <string name="Magisk_setting_des">设置Magisk支持需要重启才能生效</string>
    <string name="Remove_Android_12_process_restrictions">解锁安卓进程限制</string>
    <string name="Remove_Android_12_process_restrictions_byusb_hint">"说明:
 安卓12以上对APP的进程数量有限制会导致虚拟机卡死，需要开启调试模式进行设置来解决这个限制，荣耀手机需要电脑通过USB连接手机进行解锁"</string>
    <string name="Remove_Android_12_process_restrictions_hint">"说明:
 安卓12以上对APP的进程数量有限制会导致虚拟机卡死，需要开启调试模式进行设置来解决这个问题。"</string>
    <string name="View_in_browser">在浏览器中查看</string>
    <string name="Vulkan_enable">启用Vulkan渲染</string>
    <string name="Vulkan_setting">Vulkan设置</string>
    <string name="Vulkan_setting_des">设置Vulkan需要重启才能生效</string>
    <string name="Watch_the_short_video_for_10_seconds_and_get_the_gold_coins">观看10秒短视频即可领取金币</string>
    <string name="Watch_the_video_and_collect_gold_coins">看视频领金币</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal_notify">异常提醒</string>
    <string name="abnormal_notify_device_info">"版本: %1$s %2$d
GUID: %3$s
手机型号: %4$s
Android版本: %5$s"</string>
    <string name="abnormal_notify_download_rom">"检测到下载ROM过程中出现异常.
code: %d"</string>
    <string name="abnormal_notify_engine_start">"检测到引擎启动中出现异常.
code: %d"</string>
    <string name="abnormal_notify_engine_stop">"检测到引擎关闭时出现异常.
code: %d"</string>
    <string name="abnormal_notify_extract_rom">"检测到解压ROM过程中出现异常.
code: %d"</string>
    <string name="abnormal_notify_progress_ninety_nine">"检测到引擎启动即将结束时出现异常.
code: %d"</string>
    <string name="abnormal_notify_progress_zero">"检测到引擎初始化时出现异常.
code: %d"</string>
    <string name="abnormal_notify_repair_rom">"检测到修复ROM过程中出现异常.
code: %d"</string>
    <string name="abnormal_notify_update_rom">"检测到更新ROM过程中出现异常.
code: %d"</string>
    <string name="abnormal_notify_virtual_machine_internal">"检测到虚拟机内部出现异常.
code: %d"</string>
    <string name="about">关于</string>
    <string name="about_product">关于产品</string>
    <string name="accHint_when_foreign_game_start">外服游戏启动时提示加速</string>
    <string name="accelerate">加速</string>
    <string name="accelerating">正在加速</string>
    <string name="acceleration_permissions">加速权限</string>
    <string name="accelerator_is_interrupted">光速虚拟机加速中断</string>
    <string name="account_has_been_cancelled">账号已注销</string>
    <string name="action_settings">Settings</string>
    <string name="activity_recognition_permission_denied_msg">无法获取到运动健康权限，虚拟机内应用可能无法正常工作！</string>
    <string name="activity_recognition_permission_denied_please_allow">检测到虚拟机内应用正在访问运动健康数据，但是光速虚拟机无法获取到对应权限，需要你授权后才能正常使用！</string>
    <string name="activity_recognition_permission_denied_please_allow_in_settings">检测到虚拟机内应用正在访问运动健康数据，但是光速虚拟机无法获取到对应权限，请手动到手机设置里手动授权！</string>
    <string name="adb_connect_failed">连接WIFI ADB失败！</string>
    <string name="adb_connecting">正在连接WIFI ADB……</string>
    <string name="adb_pair_auth_fail">认证失败</string>
    <string name="adb_pair_pairing">配对中……</string>
    <string name="adb_pair_pairing_fail">配对失败</string>
    <string name="adb_port">ADB端口：</string>
    <string name="adjusted_to_the_best_resolution">已调整为最佳分辨率,是否立即重启?</string>
    <string name="advanced_mode_acc_1">VIP模式加速中,请同时打开WIFI和移动网络,可能会消耗少量移动网络流量</string>
    <string name="advanced_mode_acc_2">"VIP模式加速中,
可能会消耗少量移动网络流量"</string>
    <string name="advanced_settings_need_to_activate_senior_member">高级设置(金币兑换特权)</string>
    <string name="advertising_privileges">去广告特权</string>
    <string name="alipay">支付宝</string>
    <string name="all_file_access_content_import">光速虚拟机需要所有文件访问权限才能查看其他目录下的文件并导入，是否立刻跳转到授权页面进行授权？</string>
    <string name="all_file_access_content_restore">光速虚拟机需要所有文件访问权限才能访问Documents/VPhoneOS_Backup目录下的备份文件，是否立刻跳转到授权页面进行授权？</string>
    <string name="all_file_access_content_share">光速虚拟机需要所有文件访问权限才能访问其他目录进行共享，是否立刻跳转到授权页面进行授权？</string>
    <string name="all_file_access_title">所有文件访问权限</string>
    <string name="all_location_provider_disabled">你的手机没有开启定位功能，虚拟机内应用可能无法正常工作！</string>
    <string name="always_finish_activities_enabled_desc">检测到你在开发者选项中启用了“不保留activity”，这个开关会导致虚拟机一旦被切换到后台就会被结束，请关闭这个开关再启动虚拟机！</string>
    <string name="and">和</string>
    <string name="android10_permissions">安卓10和12权限</string>
    <string name="android10_rom">安卓10</string>
    <string name="android10_rom_desc">稳定且广泛支持的版本</string>
    <string name="android10_rom_support">支持安卓10和12 ROM</string>
    <string name="android12_rom">安卓12</string>
    <string name="android12_rom_desc">最新安卓版本，体验最新特性</string>
    <string name="android7_rom">安卓7</string>
    <string name="android7_rom_desc">基础版本，免费使用</string>
    <string name="android_10">安卓 10</string>
    <string name="android_14_mode">安卓14方式</string>
    <string name="android_712">安卓 7.1.2</string>
    <string name="android_game_rom">游戏专用</string>
    <string name="android_name">安卓</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anti_election">反选</string>
    <string name="apk_does_not_support_64_bit">当前APP是32位版本，不支持运行64位虚拟机，建议到官网下载64位版本光速虚拟机。</string>
    <string name="app_name">VPhoneOS</string>
    <string name="app_rom_download_waiting_label">等待下载ROM中，请进入全屏确认下载</string>
    <string name="app_rom_downloading_label">正在下载ROM，请稍后…</string>
    <string name="app_rom_extract_from_backup_label">正在从备份恢复数据，请耐心等待</string>
    <string name="app_rom_extract_label">正在初始化，需要15秒左右</string>
    <string name="app_rom_repair_label">正在修复文件系统，请稍候…</string>
    <string name="app_rom_transferring_label">正在准备ROM，请稍后…</string>
    <string name="app_rom_update_label">正在更新，请稍候…</string>
    <string name="app_start_label">光速虚拟机正在启动</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_market">应用市场</string>
    <string name="appmarket_unsupport_apk_64">当前32位光速虚拟机不支持安装64位应用，请前往官网下载64位光速虚拟机</string>
    <string name="auto_background_processes">允许虚拟机内APP高耗电</string>
    <string name="auto_kill_background_miners">自动结束后台挖矿脚本</string>
    <string name="auto_mute_instances">多开时自动静音后台实例</string>
    <string name="auto_use_big_core">使用CPU大核提高渲染性能</string>
    <string name="automatically_install_to_virtual_machine">自动安装到虚拟机</string>
    <string name="back_office_maintenance">后台保活 (如果后台挂机被系统强制关闭，请开启)</string>
    <string name="back_to_app">回到app</string>
    <string name="background_processes_control">允许虚拟机内APP高耗电</string>
    <string name="bilibili_page">B站</string>
    <string name="bind_and_log_in">绑定并登陆</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bit_32">32位</string>
    <string name="bit_64">64位</string>
    <string name="bits_32_only">32位版本</string>
    <string name="bits_32_only_desc">内存占用最小，不支持64位APP</string>
    <string name="bits_64_32_mixed">64位和32位混合版本</string>
    <string name="bits_64_32_mixed_desc">兼容性最好，同时支持64位和32位APP</string>
    <string name="bits_64_only">64位版本</string>
    <string name="bits_64_only_desc">比混合版本更小内存占用，不支持32位APP</string>
    <string name="bluetooth_permission_denied_msg">无法获取到蓝牙权限，虚拟机内应用可能无法正常工作！</string>
    <string name="bluetooth_permission_denied_please_allow">检测到虚拟机内应用正在访问蓝牙，但是光速虚拟机无法获取到对应权限，需要你授权后才能正常使用！</string>
    <string name="bluetooth_permission_denied_please_allow_in_settings">检测到虚拟机内应用正在访问蓝牙，但是光速虚拟机无法获取到对应权限，请手动到手机设置里手动授权！</string>
    <string name="boot_progress_optimizing_dex">安卓正在优化dex，请耐心等待</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="email_register">立即注册</string>
    <string name="extract_logs">提取日志</string>
    <string name="finish_heiyu_setting">已经完成设置，后续启动不再提示。</string>
    <string name="float_menu_return_virtual_machine">进入虚拟机</string>
    <string name="floating_permission_dialog_agree">开启</string>
    <string name="floating_permission_dialog_content">需要您在系统设置中手动开通系统权限。</string>
    <string name="floating_permission_dialog_refuse">暂不开启</string>
    <string name="floating_permission_dialog_remind">提示：如果设置中没有悬浮窗权限设置，请前往手机自带的管家类安全应用中进行设置</string>
    <string name="floating_permission_dialog_title">开启悬浮窗功能</string>
    <string name="forget_password">忘记密码</string>
    <string name="hint_email_address">电子邮箱地址</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="logs_uploading">日志上传中…</string>
    <string name="network_state_notify">注意: 您当前正处于4G网络下</string>
    <string name="try_float_window">悬浮窗方式</string>
    <string name="try_split_window">分屏方式</string>
    <string name="try_usb_window">USB方式</string>
    <string name="unknown_error">未知错误</string>
    <string name="update_dialog_button_ignore">暂不更新</string>
    <string name="update_dialog_button_start">立即更新</string>
    <string name="update_dialog_checking_breakpoint">检查是否存在可恢复的断点…</string>
    <string name="update_dialog_checking_update">检查更新中, 请稍后…</string>
    <string name="update_dialog_content_default">1. 处理了一些bug</string>
    <string name="update_dialog_title">发现新版本</string>
    <string name="upload_logs">上传日志</string>
    <string name="user_protocol_dialog_title">服务协议和隐私政策</string>
</resources>