<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="@color/commonDialogTitleText" android:gravity="center" android:id="@id/floating_permission_title" android:background="@drawable/dialog_default_top_block" android:layout_width="290.0dip" android:layout_height="50.0dip" android:text="@string/floating_permission_dialog_title" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/dialog_default_bottom_block" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:layout_width="290.0dip" android:layout_height="wrap_content">
        <TextView android:textColor="@color/commonDialogContentText" android:gravity="center_horizontal" android:id="@id/floating_permission_show_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/floating_permission_dialog_content" />
        <TextView android:textColor="@color/commonDialogContentText" android:gravity="center_horizontal" android:id="@id/floating_permission_remind_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/floating_permission_dialog_remind" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:buttonBarStyle">
            <Button android:textColor="@color/commonDialogRefuseButtonText" android:gravity="center" android:layout_gravity="start" android:id="@id/floating_permission_refuse" android:background="@drawable/dialog_default_button_false" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/floating_permission_dialog_refuse" android:layout_weight="1.0" android:layout_marginEnd="5.0dip" style="?android:buttonBarButtonStyle" />
            <Button android:textColor="@color/commonDialogAgreeButtonText" android:gravity="center" android:layout_gravity="end" android:id="@id/floating_permission_agree" android:background="@drawable/dialog_default_button_true" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/floating_permission_dialog_agree" android:layout_weight="1.0" android:layout_marginStart="5.0dip" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
