<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dp_13" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tvFloatWindow" android:background="@drawable/app_blue_btn" android:layout_width="@dimen/dp_90" android:layout_height="@dimen/dp_25" android:layout_marginTop="16.0dip" android:text="@string/try_float_window" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" app:layout_constraintEnd_toStartOf="@id/tvUsbWindow" app:layout_constraintStart_toEndOf="@id/tvSplitWindow" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dp_13" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tvUsbWindow" android:background="@drawable/app_gray_btn" android:layout_width="@dimen/dp_90" android:layout_height="@dimen/dp_25" android:layout_marginTop="16.0dip" android:text="@string/try_usb_window" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dp_13" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tvSplitWindow" android:background="@drawable/app_blue_btn" android:layout_width="@dimen/dp_90" android:layout_height="@dimen/dp_25" android:layout_marginTop="16.0dip" android:text="@string/try_split_window" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dp_18" android:textStyle="bold" android:textColor="@color/colorBlack" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="@string/Remove_Android_12_process_restrictions" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dp_15" android:textColor="@color/colorBlack" android:id="@id/tvHint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/Remove_Android_12_process_restrictions_byusb_hint" android:layout_marginStart="@dimen/dp_20" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" />
    <TextView android:textSize="@dimen/dp_13" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tvStep3" android:background="@drawable/app_blue_btn" android:layout_width="@dimen/dp_110" android:layout_height="@dimen/dp_25" android:layout_marginTop="40.0dip" android:text="@string/View_in_browser" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvHint" />
    <TextView android:textSize="@dimen/dp_13" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tvEnter" android:background="@drawable/app_blue_btn" android:layout_width="0.0dip" android:layout_height="@dimen/dp_35" android:layout_marginBottom="@dimen/dp_35" android:text="@string/float_menu_return_virtual_machine" android:layout_marginStart="@dimen/dp_30" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <CheckBox android:gravity="center" android:layout_gravity="center" android:id="@id/cbFinishSet" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="22.0dip" android:layout_marginTop="@dimen/dp_10" android:checked="false" android:button="@drawable/radio_selector" android:text="@string/View_in_browser" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_30" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvEnter" />
    <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/record_radio_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:checked="false" android:button="@drawable/radio_selector" android:text="@string/finish_heiyu_setting" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_5" app:layout_constraintBottom_toBottomOf="@id/cbFinishSet" app:layout_constraintStart_toEndOf="@id/cbFinishSet" app:layout_constraintTop_toTopOf="@id/cbFinishSet" />
</androidx.constraintlayout.widget.ConstraintLayout>
