<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="15.0sp" android:textColor="@color/commonDialogTitleText" android:gravity="center" android:id="@id/abnormal_notify_title" android:background="@drawable/dialog_default_top_block" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_margin="0.0dip" android:text="@string/abnormal_notify" />
    <View android:background="#ffdcdcdc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/abnormal_notify_message_group" android:background="@drawable/dialog_default_bottom_block" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/commonDialogContentText" android:gravity="center_horizontal" android:id="@id/abnormal_notify_show_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/unknown_error" />
        <TextView android:textColor="@color/commonDialogContentText" android:id="@id/abnormal_notify_device_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        <TextView android:textColor="@color/colorRed" android:gravity="center_horizontal" android:id="@id/abnormal_notify_network_state" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/network_state_notify" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:buttonBarStyle">
            <Button android:textColor="@color/commonDialogRefuseButtonText" android:gravity="center" android:layout_gravity="start" android:id="@id/abnormal_notify_confirm_button" android:background="@drawable/dialog_default_button_false" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/confirm" android:layout_weight="1.0" android:layout_marginEnd="5.0dip" style="?android:buttonBarButtonStyle" />
            <Button android:textColor="@color/commonDialogAgreeButtonText" android:gravity="center" android:layout_gravity="end" android:id="@id/abnormal_notify_get_log_button" android:background="@drawable/dialog_default_button_true" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/extract_logs" android:layout_weight="1.0" android:layout_marginStart="5.0dip" style="?android:buttonBarButtonStyle" />
            <Button android:textColor="@color/commonDialogAgreeButtonText" android:gravity="center" android:layout_gravity="end" android:id="@id/abnormal_notify_upload_log_button" android:background="@drawable/dialog_default_button_true" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/upload_logs" android:layout_weight="1.0" android:layout_marginStart="5.0dip" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/abnormal_notify_dialog_upload_progress_group" android:background="@drawable/dialog_default_bottom_block" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.common.widget.NumberProgressBar android:id="@id/abnormal_notify_upload_logs_progress_bar" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="5.0dip" app:number_progress_reached_bar_height="6.0dip" app:number_progress_reached_color="#ff3552f6" app:number_progress_text_background_color="#ff3552f6" app:number_progress_text_background_enable="true" app:number_progress_text_background_height="15.0dip" app:number_progress_text_background_radius="15.0dip" app:number_progress_text_background_width="32.0dip" app:number_progress_text_color="@color/colorWhite" app:number_progress_unreached_bar_height="6.0dip" />
        <TextView android:textSize="15.0dip" android:textColor="@color/updateDialogContentText" android:gravity="center" android:id="@id/abnormal_notify_upload_logs_progress_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/logs_uploading" android:maxLines="1" />
        <TextView android:textSize="13.0dip" android:textColor="@color/updateDialogContentText" android:layout_gravity="end" android:id="@id/abnormal_notify_upload_logs_cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/cancel" android:maxLines="1" android:layout_marginEnd="17.0dip" />
    </LinearLayout>
</LinearLayout>
