<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="#ffcfc3bf" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/relativeLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/imageView2" android:layout_width="@dimen/dp_100" android:layout_height="@dimen/dp_100" android:layout_marginLeft="@dimen/dp_30" android:layout_marginTop="@dimen/dp_80" app:layout_anchorGravity="end|bottom" app:srcCompat="@drawable/default_avatar" />
        <View android:id="@id/viewEmail" android:background="#ff000000" android:layout_width="339.0dip" android:layout_height="@dimen/dp_0" android:layout_marginLeft="@dimen/dp_30" android:layout_marginTop="@dimen/dp_70" android:layout_marginRight="@dimen/dp_30" android:layout_below="@id/imageView2" />
        <View android:id="@id/viewPass" android:background="#ff000000" android:layout_width="339.0dip" android:layout_height="@dimen/dp_0" android:layout_marginLeft="@dimen/dp_30" android:layout_marginTop="@dimen/dp_50" android:layout_marginRight="@dimen/dp_30" android:layout_below="@id/viewEmail" />
        <Button android:id="@id/btnEmailLogin" android:layout_width="149.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_100" android:layout_marginTop="34.0dip" android:text="@string/login" android:layout_below="@id/viewPass" android:layout_marginStart="70.0dip" android:layout_marginEnd="70.0dip" android:layout_alignStart="@id/viewPass" android:layout_alignEnd="@id/viewPass" />
        <Button android:id="@id/btnRegister" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/email_register" android:layout_below="@id/btnEmailLogin" android:layout_marginEnd="3.0dip" android:layout_alignEnd="@id/viewPass" />
        <Button android:id="@id/btnResetPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/forget_password" android:layout_below="@id/btnEmailLogin" android:layout_marginStart="3.0dip" android:layout_alignStart="@id/viewPass" />
        <TextView android:gravity="center" android:id="@id/textView2" android:layout_width="208.0dip" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/user_protocol_dialog_title" android:layout_alignParentBottom="true" android:layout_marginStart="65.0dip" android:layout_marginEnd="66.0dip" android:layout_alignStart="@id/viewPass" android:layout_alignEnd="@id/viewPass" />
        <EditText android:textSize="16.0sp" android:id="@id/editTextTextEmailAddress" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="36.0dip" android:hint="@string/hint_email_address" android:ems="10" android:layout_below="@id/imageView2" android:inputType="textEmailAddress" android:layout_marginStart="0.0dip" android:layout_marginEnd="0.0dip" android:layout_alignStart="@id/viewEmail" android:layout_alignEnd="@id/viewEmail" />
        <EditText android:textSize="16.0sp" android:id="@id/editTextTextPassword" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="15.0dip" android:hint="@string/hint_password" android:ems="10" android:layout_alignTop="@id/viewEmail" android:inputType="textPassword" android:layout_marginStart="0.0dip" android:layout_marginEnd="0.0dip" android:layout_alignStart="@id/viewEmail" android:layout_alignEnd="@id/viewEmail" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
