<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.facebook.drawee.view.SimpleDraweeView android:layout_width="280.0dip" android:layout_height="90.0dip" app:placeholderImage="@drawable/update_dialog_top_part" app:placeholderImageScaleType="fitXY" app:roundBottomLeft="false" app:roundBottomRight="false" app:roundedCornerRadius="10.0dip" />
    <RelativeLayout android:id="@id/update_dialog_sync_check_layout" android:background="@drawable/dialog_default_bottom_block" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0dip" android:textColor="@color/updateDialogContentText" android:id="@id/update_dialog_sync_check_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="10.0dip" android:text="@string/update_dialog_checking_update" android:layout_centerHorizontal="true" />
        <ProgressBar android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginBottom="15.0dip" android:layout_below="@id/update_dialog_sync_check_text" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/update_download_dialog_confirm_group" android:background="@drawable/dialog_default_bottom_block" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="19.0sp" android:textColor="@color/updateDialogTitleText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/update_dialog_title" />
        <TextView android:textSize="14.0sp" android:textColor="@color/updateDialogContentText" android:id="@id/update_download_dialog_content_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="20.0dip" android:text="@string/update_dialog_content_default" />
        <LinearLayout android:orientation="horizontal" android:id="@id/update_download_dialog_choose_buttons" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:buttonBarStyle">
            <Button android:textColor="@color/commonDialogRefuseButtonText" android:gravity="center" android:id="@id/update_download_dialog_button_ignore" android:background="@drawable/dialog_default_button_false" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/update_dialog_button_ignore" android:layout_weight="1.0" android:layout_marginEnd="5.0dip" style="?android:buttonBarButtonStyle" />
            <Button android:textColor="@color/commonDialogAgreeButtonText" android:gravity="center" android:id="@id/update_download_dialog_button_update" android:background="@drawable/dialog_default_button_true" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/update_dialog_button_start" android:layout_weight="1.0" android:layout_marginStart="5.0dip" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/update_download_dialog_progress_group" android:background="@drawable/dialog_default_bottom_block" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.common.widget.NumberProgressBar android:id="@id/update_download_dialog_progress_bar" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="5.0dip" app:number_progress_reached_bar_height="6.0dip" app:number_progress_reached_color="#ff3552f6" app:number_progress_text_background_color="#ff3552f6" app:number_progress_text_background_enable="true" app:number_progress_text_background_height="15.0dip" app:number_progress_text_background_radius="15.0dip" app:number_progress_text_background_width="32.0dip" app:number_progress_text_color="@color/colorWhite" app:number_progress_unreached_bar_height="6.0dip" />
        <TextView android:textSize="15.0dip" android:textColor="@color/updateDialogContentText" android:gravity="center" android:id="@id/update_download_dialog_progress_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/update_dialog_checking_breakpoint" android:maxLines="1" />
        <TextView android:textSize="13.0dip" android:textColor="@color/updateDialogContentText" android:layout_gravity="end" android:id="@id/update_download_dialog_button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/cancel" android:maxLines="1" android:layout_marginEnd="17.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/update_download_dialog_message_group" android:background="@drawable/dialog_default_bottom_block" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0dip" android:textColor="@color/updateDialogContentText" android:gravity="center" android:id="@id/update_download_dialog_message_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/unknown_error" />
        <TextView android:textSize="13.0dip" android:textColor="@color/textBlue" android:layout_gravity="end" android:id="@id/update_download_dialog_button_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>
